Fixes Java 11